deploy/grpc/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hellogrpc
  labels:
    istio-injection: enabled
