deploy/grpc/gateways.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grpcs-gateway
  namespace: aks-istio-ingress
spec:
  selector:
    istio: aks-istio-ingressgateway-internal  
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grpc-ingress-tls
    hosts:
    - "*.bjdcsa.cloud"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: PASSTHROUGH
  #   hosts:
  #   - "*.bjdcsa.cloud"
