deploy/grpc/hello-example-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellogreeter-v2
  namespace: hellogrpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellogreeter
      version: v2      
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: hellogreeter
        version: v2
    spec:
      serviceAccountName: hellogreeter-sa-identity
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000  
        supplementalGroups: [2000]
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: hellogreeter
        image: bjd145/hello-service:06c93709b309
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false 
        ports:
        - containerPort: 5003
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "64Mi"
            cpu: "0.25"
        volumeMounts:
        - mountPath: /app/certs
          name: tls-volume
      tolerations:
      - key: "reservedFor"
        operator: "Equal"
        value: "apps"
        effect: "NoSchedule"
      volumes:
      - name: tls-volume
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "hello-service-cert"
        #secret:
        #  secretName: hello-service-cert
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-v2
  namespace: hellogrpc
spec:
  ports:
  - port: 5003
    targetPort: 5003
    protocol: TCP
  type: ClusterIP 
  selector:
    app: hellogreeter
    version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-service-v2-vs
  namespace: hellogrpc
spec:
  hosts:
  - api-v2.bjdcsa.cloud
  gateways:
  - aks-istio-ingress/grpcs-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - api-v2.bjdcsa.cloud
    route:
    - destination:
        host: hello-service-v2.hellogrpc.svc.cluster.local
        port:
          number: 5003
