deploy/grpc/hello-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hellogrpc
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hellogrpc
  labels:
    app: hellogreeter
spec:
  ports:
  - port: 5001
    name: grpc
  type: ClusterIP 
  selector:
    app: hellogreeter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellogreeter
  namespace: hellogrpc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellogreeter
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: hellogreeter
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000  
        supplementalGroups: [2000]
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: hellogreeter
        image: bjd145/hello-service:3352bdfde61d
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false  
        ports:
        - containerPort: 5001
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "64Mi"
            cpu: "0.25"
        volumeMounts:
        - mountPath: /app/certs
          name: tls-volume
      tolerations:
      - key: "reservedFor"
        operator: "Equal"
        value: "apps"
        effect: "NoSchedule"
      volumes:
      - name: tls-volume
        secret:
          secretName: hello-service-cert
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grpcs-gateway
  namespace: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8443
      name: http2
      protocol: HTTP2
    tls:
      mode: PASSTHROUGH
      credentialName: istio-ingress-tls
    hosts:
    - "*.bjdcsa.cloud"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-service-vs
  namespace: hellogrpc
spec:
  hosts:
  - api.bjdcsa.cloud"
  gateways:
  - istio-gateway/grpcs-gateway
  http:
  - route:
    - destination:
        host: hello-service
        port:
          number: 5001
